--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -43,7 +44,8 @@
     "next": "16.0.3",
     "nookies": "^2.5.2",
     "notistack": "^3.0.2",
-    "posthog-js": "^1.292.0",
+    "posthog-js": "^1.299.0",
+    "posthog-node": "^5.15.0",
     "react": "19.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "19.2.0",
